# api_scoring_pytest

./: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  readme.md
.github/workflows/: main.yml
scripts/: fill_redis_for_test.py
src/: api.py  scoring.py  store.py
tests/: test.py  test_func.py  test_modular.py
tests/integration/: test_store.py
tests/unit/: params.py  test.py  test_scoring.py
tests/unit/fields/: fixtures.py  params.py  test_fields.py
tests/unit/requests/: fixtures.py  test_requests.py
tests/unit/scoring/: fake_storage.py  fixtures.py  params.py  test_scoring.py
