[project]
name = "api-scoring"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexanderPAI",email = "lawlikeart@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
